views: use interior padding in treeview edit field

In f1b8b41f, TreeView's Textfield for editing lost the default Harmony
focus ring and gained a fixed 1pt border. However, that change lost
the interior padding on the Textfield, so the text runs directly into
the border ring.

Bug: 801096
Change-Id: Ic078c3ae17964c7929e903f2e6665303be1188ad
Reviewed-on: https://chromium-review.googlesource.com/870751
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#529861}
Former-commit-id: f81dbbb30c4b054059502682325551d278b251be